[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry_k8s_libsonnet"
version = "0.0.1"
description = "k8s-libsonnet repackaged as a python package"
authors = [
    { name = "Filippo Pacifici", email = "fpacifici@sentry.io" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
packages = ["k8slibsonnet", "static"]
include-package-data = true

[tool.black]
line-length = 79
target-version = ['py38']
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 79

pythonVersion = "3.11"

